# openai-cost-tracker

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
cost_tracker/: __init__.py  cli_tracker.py  openai_token_prices.py  tracker.py
