[tool.poetry]
name = "openai-request-tracker"
version = "0.1.1"
description = "OpenAI cost tracker that logs OpenAI requests using opentelemetry"
authors = ["Sebastian Schramm <schrammsm@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sebastianschramm/openai-cost-tracker"
homepage = "https://github.com/sebastianschramm/openai-cost-tracker"

packages = [
    { include = "cost_tracker" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sebastianschramm/openai-cost-tracker/issues"
"Releases" = "https://github.com/sebastianschramm/openai-cost-tracker/releases"


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
opentelemetry-instrumentation-openai = "^0.33.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-api = "^1.27.0"
openai = "^1.51.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
track-costs = "cost_tracker.cli_tracker:track_costs"
display-costs = "cost_tracker.tracker:display_costs"
